# trade-bot

./: .env.example  .gitignore  AUTOMATION_SETUP.md  DEPLOYMENT.md  LICENSE  QUICKSTART.md  README.md  TESTING_SUMMARY.md  VPS_DEPLOYMENT.md  com.tradebot.agent.plist  plan.md  pyproject.toml  pytest.ini  tradebot-oneshot.service  tradebot.service  tradebot.timer
.claude/: config.json
scripts/: daily_run.sh  deploy_vps.sh  install_on_vps.sh  restart_bot.sh  setup_service.sh  start_bot.sh  status_bot.sh  stop_bot.sh  vps_control.sh
src/trade_bot/: __init__.py  main.py
src/trade_bot/core/: __init__.py  enums.py  models.py  state_lock.py
src/trade_bot/data/: __init__.py  connector.py  regime_detector.py
src/trade_bot/decision/: __init__.py  engine.py
src/trade_bot/deployment/: __init__.py  manager.py
src/trade_bot/execution/: __init__.py  emergency.py  engine.py  slippage.py
src/trade_bot/learning/: __init__.py  backtest.py  journal.py  loop.py  reward.py
src/trade_bot/monitoring/: __init__.py  monitor.py
src/trade_bot/risk/: __init__.py  validator.py
src/trade_bot/scanner/: __init__.py  market_scanner.py  models.py
src/trade_bot/signal/: __init__.py  generator.py
tests/: conftest.py
tests/integration/: test_trade_lifecycle.py
tests/unit/: test_backtest.py  test_data_connector.py  test_decision_engine.py  test_deployment.py  test_execution_engine.py  test_journal.py  test_learning_loop.py  test_market_scanner.py  test_monitoring.py  test_reward.py  test_risk_validator.py  test_signal_generator.py  test_state_lock.py
